--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -2064,7 +2064,7 @@
       "metadata": {
         "id": "XqosAazDUV6G"
       },
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -2075,7 +2075,7 @@
       "metadata": {
         "id": "QTryZvYfR64o"
       },
-      "execution_count": 53,
+      "execution_count": 68,
       "outputs": []
     },
     {
@@ -2093,18 +2093,18 @@
       "metadata": {
         "id": "DuXuBqthMd9y"
       },
-      "execution_count": 54,
+      "execution_count": 69,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=43)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=43)"
       ],
       "metadata": {
         "id": "MfGK13s7R9Jk"
       },
-      "execution_count": 55,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -2122,18 +2122,18 @@
       "metadata": {
         "id": "E7GK7BVnMjMZ"
       },
-      "execution_count": 56,
+      "execution_count": 71,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=12)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=12)"
       ],
       "metadata": {
         "id": "NXGxV-1SR91q"
       },
-      "execution_count": 57,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -2151,18 +2151,18 @@
       "metadata": {
         "id": "8LK4dWzbM04j"
       },
-      "execution_count": 58,
+      "execution_count": 75,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=33)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.4, random_state=33)"
       ],
       "metadata": {
         "id": "1f5Yr1GmR-Xb"
       },
-      "execution_count": 59,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -2180,18 +2180,18 @@
       "metadata": {
         "id": "T-Qhj7pCM4P_"
       },
-      "execution_count": 60,
+      "execution_count": 77,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=20)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.5, random_state=20)"
       ],
       "metadata": {
         "id": "iAp-iBndR_Hd"
       },
-      "execution_count": 61,
+      "execution_count": 78,
       "outputs": []
     },
     {
@@ -2209,7 +2209,7 @@
       "metadata": {
         "id": "CypEP8yIPN8f"
       },
-      "execution_count": 62,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -2220,7 +2220,7 @@
       "metadata": {
         "id": "Fisot9okNHDD"
       },
-      "execution_count": 63,
+      "execution_count": 80,
       "outputs": []
     },
     {
@@ -2231,7 +2231,7 @@
       "metadata": {
         "id": "duLSRSbpNLiC"
       },
-      "execution_count": 64,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -2244,64 +2244,10 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eUWxCkHiNgle",
-        "outputId": "025fa784-e802-494c-9ed4-d365063c3742"
+        "outputId": "846cd5b5-0383-4152-d80b-c4e1552792c6"
       },
-      "execution_count": 65,
+      "execution_count": 82,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n",
-            "/usr/local/lib/python3.8/dist-packages/sklearn/linear_model/_logistic.py:814: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  n_iter_i = _check_optimize_result(\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -2334,12 +2280,13 @@
               "                              Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
               "                                              ('classifier',\n",
               "                                               LogisticRegressionCV(cv=5,\n",
+              "                                                                    max_iter=1000,\n",
               "                                                                    random_state=20))]))],\n",
               "                 voting='soft')"
             ]
           },
           "metadata": {},
-          "execution_count": 65
+          "execution_count": 82
         }
       ]
     },
@@ -2350,12 +2297,12 @@
         "\n",
         "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
         "\n",
-        "predictions.to_csv(\"ensembleLRCV3to6.csv\")"
+        "predictions.to_csv(\"ensembleLRCV5x5v2.csv\")"
       ],
       "metadata": {
         "id": "Py3b8tyGNtFP"
       },
-      "execution_count": 66,
+      "execution_count": 84,
       "outputs": []
     }
   ]
