--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -56,10 +56,10 @@
       ],
       "metadata": {
         "id": "Hh3vpynrWLgi",
-        "outputId": "d638be99-1778-444e-b45f-639797f0da29",
+        "outputId": "9eb591f5-343e-4630-a496-52e366c62442",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 204
+          "height": 206
         }
       },
       "execution_count": 2,
@@ -77,7 +77,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-8dc140e6-260e-4735-bfe3-90fbce07b3cd\">\n",
+              "  <div id=\"df-f23f119b-991b-46c7-80d8-5a625866c944\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -136,7 +136,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-8dc140e6-260e-4735-bfe3-90fbce07b3cd')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f23f119b-991b-46c7-80d8-5a625866c944')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -187,12 +187,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-8dc140e6-260e-4735-bfe3-90fbce07b3cd button.colab-df-convert');\n",
+              "          document.querySelector('#df-f23f119b-991b-46c7-80d8-5a625866c944 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-8dc140e6-260e-4735-bfe3-90fbce07b3cd');\n",
+              "          const element = document.querySelector('#df-f23f119b-991b-46c7-80d8-5a625866c944');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -228,7 +228,7 @@
       ],
       "metadata": {
         "id": "NFlTAKsIjBMS",
-        "outputId": "ef732e3b-6212-4356-ea3c-ae8e6b1e83fc",
+        "outputId": "b2da3e1d-10aa-474c-8ee8-19ce4e0c808c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -303,7 +303,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "ZctKHudHX_hw"
       },
-      "execution_count": 7,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -350,7 +350,7 @@
       "metadata": {
         "id": "qIestHk0Y4r_"
       },
-      "execution_count": 8,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -361,7 +361,7 @@
       "metadata": {
         "id": "M_yVAG8zaSwX"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2064,7 +2064,7 @@
       "metadata": {
         "id": "XqosAazDUV6G"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2075,7 +2075,7 @@
       "metadata": {
         "id": "QTryZvYfR64o"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2093,7 +2093,7 @@
       "metadata": {
         "id": "DuXuBqthMd9y"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2104,7 +2104,7 @@
       "metadata": {
         "id": "MfGK13s7R9Jk"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2122,7 +2122,7 @@
       "metadata": {
         "id": "E7GK7BVnMjMZ"
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2133,7 +2133,7 @@
       "metadata": {
         "id": "NXGxV-1SR91q"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2151,7 +2151,7 @@
       "metadata": {
         "id": "8LK4dWzbM04j"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2162,7 +2162,7 @@
       "metadata": {
         "id": "1f5Yr1GmR-Xb"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2180,7 +2180,7 @@
       "metadata": {
         "id": "T-Qhj7pCM4P_"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2191,7 +2191,7 @@
       "metadata": {
         "id": "iAp-iBndR_Hd"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2209,7 +2209,7 @@
       "metadata": {
         "id": "CypEP8yIPN8f"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2220,7 +2220,7 @@
       "metadata": {
         "id": "Fisot9okNHDD"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2231,7 +2231,7 @@
       "metadata": {
         "id": "duLSRSbpNLiC"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2246,7 +2246,7 @@
         "id": "eUWxCkHiNgle",
         "outputId": "846cd5b5-0383-4152-d80b-c4e1552792c6"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2302,7 +2302,156 @@
       "metadata": {
         "id": "Py3b8tyGNtFP"
       },
-      "execution_count": 84,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#LinearSVC"
+      ],
+      "metadata": {
+        "id": "o_WVta6XCOpA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.svm import LinearSVC"
+      ],
+      "metadata": {
+        "id": "y12cjmsTCamw"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LinearSVC()"
+      ],
+      "metadata": {
+        "id": "NGBc0YDfCUuX"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe.fit(X, y)"
+      ],
+      "metadata": {
+        "id": "zvHRi0UoCQmx",
+        "outputId": "f2eb8a95-2108-4f27-8024-83abf6ca9c46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('vectorizer', TfidfVectorizer()), ('classifier', LinearSVC())])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = pipe.predict(X_pred)\n",
+        "\n",
+        "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions.to_csv(\"LinearSVC.csv\")"
+      ],
+      "metadata": {
+        "id": "I1dm4F2GCvAE"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#MultinomialNB"
+      ],
+      "metadata": {
+        "id": "QKF7n6vZDHCt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "\n",
+        "classifier = MultinomialNB()"
+      ],
+      "metadata": {
+        "id": "xsa1hMGWDJmQ"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])\n",
+        "\n",
+        "# Fit model on training set\n",
+        "pipe.fit(X, y)"
+      ],
+      "metadata": {
+        "id": "hJA-UKdYDtX5",
+        "outputId": "22619b71-4bdf-4809-b3f1-56b99023e0a1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('vectorizer', TfidfVectorizer()),\n",
+              "                ('classifier', MultinomialNB())])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = pipe.predict(X_pred)\n",
+        "\n",
+        "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions.to_csv(\"MultinomialNB.csv\")"
+      ],
+      "metadata": {
+        "id": "CbRZiCcSDvDy"
+      },
+      "execution_count": 20,
       "outputs": []
     }
   ]
