--- a/code/UNIL_ROLEX.ipynb
+++ b/code/UNIL_ROLEX.ipynb
@@ -2349,11 +2349,11 @@
         "pipe.fit(X, y)"
       ],
       "metadata": {
-        "id": "zvHRi0UoCQmx",
-        "outputId": "f2eb8a95-2108-4f27-8024-83abf6ca9c46",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "zvHRi0UoCQmx",
+        "outputId": "f2eb8a95-2108-4f27-8024-83abf6ca9c46"
       },
       "execution_count": 14,
       "outputs": [
@@ -2418,11 +2418,11 @@
         "pipe.fit(X, y)"
       ],
       "metadata": {
-        "id": "hJA-UKdYDtX5",
-        "outputId": "22619b71-4bdf-4809-b3f1-56b99023e0a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hJA-UKdYDtX5",
+        "outputId": "22619b71-4bdf-4809-b3f1-56b99023e0a1"
       },
       "execution_count": 19,
       "outputs": [
@@ -2452,6 +2452,114 @@
         "id": "CbRZiCcSDvDy"
       },
       "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#LRCV5 + LinearSVC + MultinomialNB"
+      ],
+      "metadata": {
+        "id": "17FhfEtTEDn4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = LogisticRegressionCV(solver='lbfgs', cv=5, max_iter=1000, random_state=0)\n",
+        "\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LRCV = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "iXNAPA1QEKCV"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classifier = LinearSVC()\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_LinearSVC = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "88UFyurEEYfP"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define classifier\n",
+        "classifier = MultinomialNB()\n",
+        "\n",
+        "# Create pipeline\n",
+        "## The purpose of the pipeline is to assemble several steps that can be cross-validated together while setting different parameters.\n",
+        "pipe_MultinomialNB = Pipeline([('vectorizer', tfidf),\n",
+        "                 ('classifier', classifier)])"
+      ],
+      "metadata": {
+        "id": "Qgl0mYw6ERSb"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.ensemble import VotingClassifier"
+      ],
+      "metadata": {
+        "id": "tl_u2R9fEgwM"
+      },
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soft_voting_clf = VotingClassifier(estimators=[('LCRV', pipe_LRCV), ('LinearSVC', pipe_LinearSVC), ('MultinomialNB', MultinomialNB)], voting='soft')"
+      ],
+      "metadata": {
+        "id": "ahYxI8MOEjKW"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "soft_voting_clf.fit(X, y) # training"
+      ],
+      "metadata": {
+        "id": "Yxc9b17YEyLN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "predictions = soft_voting_clf.predict(X_pred)\n",
+        "\n",
+        "predictions = pd.DataFrame(predictions,columns=['difficulty'])\n",
+        "\n",
+        "predictions.to_csv(\"combi_lrcv_LinearSVC_MultinomialNB.csv\")"
+      ],
+      "metadata": {
+        "id": "T_CwQkH1E5gk"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
